added button of delete new in home and added meta tag and redirect link

--- a/src/index.html
+++ b/src/index.html
@@ -4,23 +4,28 @@
   <meta charset="utf-8">
   <title>CEMET - Centro de Estudiantes de Metalurgia</title>
   <base href="/">
+  <meta name="description" content="Página del Centro de Estudiantes de Ingeniería en Metalurgia de la USACH, podrás contactarnos, hacer un reclamo, ver la malla de tu carrera, ver la directiva, etc.">
+  <meta name="keywords" content="CEMET, CEMET USACH, cemet usach, metalurgia, usach, centro de estudiantes">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="CEMET - Centro de Estudiantes de Metalurgia" />
+  <meta property="og:url" content="https://cemetusach.cl/" />
+  <meta property="og:description" content="Página del Centro de Estudiantes de Ingeniería en Metalurgia de la USACH, podrás contactarnos, hacer un reclamo, ver la malla de tu carrera, ver la directiva, etc." />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/images/logopng.png">
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"> -->
+  <link rel="canonical" href="https://cemetusach.cl/" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300400500&display=swap" rel="stylesheet"> -->
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Aref+Ruqaa|Mirza|Roboto" rel="stylesheet">
   <link href="https://cdn.quilljs.com/1.2.2/quill.snow.css" rel="stylesheet">
-    </head>
-    <body>
-      <app-root></app-root>
-      <script src="https://apis.google.com/js/api.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> -->
+</head>
+<body>
+  <app-root></app-root>
+  <script src="https://apis.google.com/js/api.js"></script>
+  <!-- <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> -->
   <script src="https://cdn.quilljs.com/1.0.0/quill.js"></script>
 </body>
 </html>
