--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,13 @@
   <meta name="keywords" content="CEMET, CEMET USACH, cemet usach, metalurgia, usach, centro de estudiantes">
   <meta property="og:type" content="website" />
   <meta property="og:title" content="CEMET - Centro de Estudiantes de Metalurgia" />
+  <meta property="og:image" content="assets/images/logopng.png"></meta>
   <meta property="og:url" content="https://cemetusach.cl/" />
   <meta property="og:description" content="Página del Centro de Estudiantes de Ingeniería en Metalurgia de la USACH, podrás contactarnos, hacer un reclamo, ver la malla de tu carrera, ver la directiva, etc." />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/images/logopng.png">
   <link rel="canonical" href="https://cemetusach.cl/" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Aref+Ruqaa|Mirza|Roboto" rel="stylesheet">
@@ -23,9 +23,6 @@
 <body>
   <app-root></app-root>
   <script src="https://apis.google.com/js/api.js"></script>
-  <!-- <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> -->
   <script src="https://cdn.quilljs.com/1.0.0/quill.js"></script>
 </body>
 </html>
